--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "create-react-context": "^0.2.3",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.5.5",
+    "morgan": "^1.9.1",
     "react": "^16.8.6",
     "react-router-dom": "^5.0.0"
   }
